<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SecurityDetails">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="20sp"
        android:paddingHorizontal="1sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Security Details"
            android:layout_marginVertical="10sp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtQues1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="2sp"
            android:textColorHint="@color/green"
            android:hint="@string/question"
            app:hintEnabled="true"
            app:hintTextColor="@color/green"
            android:paddingHorizontal="25sp"
            app:errorEnabled="true"
            >
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtQues1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:inputType="none"
                android:lines="1"
                android:hint="Question"
                android:drawablePadding="-5dp"
                android:gravity="start"
                android:imeOptions="actionDone"
                android:drawableRight="@drawable/ic_arrow"
                android:drawableTint="@color/green"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtAns1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="2sp"
            android:hint="@string/answer"
            android:textColorHint="@color/green"
            app:hintEnabled="true"
            app:hintTextColor="@color/green"
            android:paddingHorizontal="25sp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAns1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:imeOptions="actionDone"
                android:inputType="text|textNoSuggestions"
                android:padding="15dp"
                android:textSize="16sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtQues2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="2sp"
            android:textColorHint="@color/green"
            android:hint="@string/question"
            app:hintEnabled="true"
            app:hintTextColor="@color/green"
            android:paddingHorizontal="25sp"
            app:errorEnabled="true"
            >
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edtQues2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:inputType="none"
                android:lines="1"
                android:hint="Question"
                android:drawablePadding="-5dp"
                android:gravity="start"
                android:imeOptions="actionDone"
                android:drawableRight="@drawable/ic_arrow"
                android:drawableTint="@color/green"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtAns2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="2sp"
            android:hint="@string/answer"
            android:textColorHint="@color/green"
            app:hintEnabled="true"
            app:hintTextColor="@color/green"
            android:paddingHorizontal="25sp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAns2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:imeOptions="actionDone"
                android:inputType="text|textNoSuggestions"
                android:padding="15dp"
                android:textSize="16sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtAccPin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="2sp"
            android:hint="@string/account_pin"
            android:textColorHint="@color/green"
            app:hintEnabled="true"
            app:hintTextColor="@color/green"
            android:paddingHorizontal="25sp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAccPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:imeOptions="actionDone"
                android:inputType="text|textNoSuggestions"
                android:textSize="16sp"
                android:drawableRight="@drawable/ic_eye">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtConfirmPin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="2sp"
            android:hint="@string/confirm_account_pin"
            android:textColorHint="@color/green"
            app:hintEnabled="true"
            app:hintTextColor="@color/green"
            android:paddingHorizontal="25sp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfirmPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:imeOptions="actionDone"
                android:inputType="text|textNoSuggestions"
                android:padding="15dp"
                android:textSize="16sp"
                android:drawableRight="@drawable/ic_eye">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Miscellaneous"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginVertical="5sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_you_politically_exposed_person_n_pep"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:paddingHorizontal="25sp"
            android:layout_marginVertical="5sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="25sp"
            android:weightSum="2">
            <RadioButton
                android:id="@+id/FirstradioButton1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:buttonTint="@color/green"
                android:layout_weight="1"
                android:text="Yes"
                android:textColor="@color/green"
                android:textSize="15sp"/>
            <RadioButton
                android:id="@+id/FirstradioButton2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:buttonTint="@color/green"
                android:layout_weight="1"
                android:text="No"
                android:textColor="@color/green"
                android:textSize="15sp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_you_the_family_member_of_a_npolitically_exposed_person_pep"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/green"
           android:paddingHorizontal="25sp"
            android:layout_marginVertical="5sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="25sp"
            android:weightSum="2">
            <RadioButton
                android:id="@+id/SecondradioButton1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:buttonTint="@color/green"
                android:layout_weight="1"
                android:text="Yes"
                android:textColor="@color/green"
                android:textSize="15sp"/>
            <RadioButton
                android:id="@+id/SecondradioButton2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:buttonTint="@color/green"
                android:layout_weight="1"
                android:text="No"
                android:textColor="@color/green"
                android:textSize="15sp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_you_close_associate_of_a_npolitically_exposed_person_pep"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/green"
           android:paddingHorizontal="25sp"
            android:layout_marginVertical="5sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="25sp"
            android:weightSum="2">
            <RadioButton
                android:id="@+id/ThirdradioButton1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:buttonTint="@color/green"
                android:layout_weight="1"
                android:text="Yes"
                android:textColor="@color/green"
                android:textSize="15sp"/>
            <RadioButton
                android:id="@+id/ThirdradioButton2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:buttonTint="@color/green"
                android:layout_weight="1"
                android:text="No"
                android:textColor="@color/green"
                android:textSize="15sp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" The Financial Action Task Force (FAFT) defines Politically Exposed Person (PEP) as:
           individuals who are or have been entrusted with prominent public functions in a foreign country.
            Example: Heads of State or of government, senior politicians, senior government or executive
            council of governments, judicial, military officials, senior executives of state owned corporation,
            important politically party officials, ambassadors, attaches. Business relationships with family members or close associates of PEPs involve reputational risks similar to those with PEP themselves."
            android:paddingHorizontal="25sp"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/btnSaveContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="Save And Continue"
            android:textAllCaps="false"
            android:layout_marginHorizontal="25sp"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="Back"
            android:layout_marginHorizontal="25sp"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>