<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30sp"
    android:paddingVertical="20sp"
    tools:context=".Activity.PersonalDetails">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Personal Details"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_blank_pfp"
            android:layout_gravity="center"
            android:layout_marginVertical="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="(Allowed document formats are:jpg,jpeg,png)"
            android:textSize="12sp"
            android:layout_marginBottom="10sp"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Profile Picture"
            android:textSize="18sp"
            android:layout_marginBottom="10sp"
            android:textColor="@color/green"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFirstName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="2sp"
            android:layout_marginVertical="10sp"
            android:background="@android:color/transparent"
            android:hint="@string/first_name"
            android:textColorHint="@color/green"
            app:hintEnabled="true"
            app:hintTextColor="@color/green"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:imeOptions="actionDone"
                android:inputType="text|textNoSuggestions"
                android:padding="15dp"
                android:textSize="16sp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="2sp"
            android:layout_marginVertical="10sp"
            android:hint="middle_name"
            android:textColorHint="@color/green"
            app:hintEnabled="true"
            app:hintTextColor="@color/green"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMiddleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:imeOptions="actionDone"
                android:inputType="text|textNoSuggestions"
                android:padding="15dp"
                android:textSize="16sp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLastName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:hint="@string/last_name"
            android:textColorHint="@color/green"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="2sp"
            app:hintEnabled="true"
            app:hintTextColor="@color/green"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:imeOptions="actionDone"
                android:inputType="text|textNoSuggestions"
                android:padding="15dp"
                android:textSize="16sp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDOB"
            android:layout_marginVertical="10sp"
            android:hint="@string/date_of_birth"
            android:textColorHint="@color/green"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="2sp"
            app:hintEnabled="true"
            app:hintTextColor="@color/green"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_calendar"
                android:enabled="true"
                android:imeOptions="actionDone"
                android:inputType="date"
                android:padding="15dp"
                android:textSize="16sp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/linearlayoutGender"
            android:orientation="vertical">
<!--            <Spinner-->
<!--                android:id="@+id/spinnerGender"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="0dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginRight="30dp"-->
<!--                android:backgroundTint="@color/white"-->
<!--                android:spinnerMode="dropdown"-->
<!--                android:textColor="#000" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:boxStrokeColor="@color/blue"
                app:boxStrokeWidth="2sp"
                android:textColorHint="@color/green"
                android:layout_marginVertical="10sp"
                android:hint="@string/gender"
                app:hintEnabled="true"
                android:id="@+id/txtGender"
                app:hintTextColor="@color/green"
                app:errorEnabled="true"
                >
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/edtGender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:inputType="none"
                    android:lines="1"
                    android:drawablePadding="-5dp"
                    android:gravity="start"
                    android:imeOptions="actionDone"
                    android:drawableRight="@drawable/ic_arrow"
                    android:drawableTint="@color/green"
                    android:textStyle="bold"/>
<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:id="@+id/edtGender"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:inputType="textImeMultiLine"-->
<!--                    android:imeOptions="actionDone"-->
<!--                    android:drawableRight="@drawable/ic_arrow"-->
<!--                    android:drawableTint="@color/grey"-->
<!--                    />-->

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:boxStrokeColor="@color/blue"
                app:boxStrokeWidth="2sp"
                android:textColorHint="@color/green"
                android:layout_marginVertical="10sp"
                android:hint="@string/gender"
                app:hintEnabled="true"
                android:id="@+id/txt1"
                app:hintTextColor="@color/green"
                app:errorEnabled="true"
                >
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edt1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:inputType="none"
                android:lines="1"
                android:drawablePadding="-5dp"
                android:gravity="start"
                android:imeOptions="actionDone"
                android:drawableRight="@drawable/ic_arrow"
                android:drawableTint="@color/green"
                android:textStyle="bold"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:boxStrokeColor="@color/blue"
                app:boxStrokeWidth="2sp"
                android:textColorHint="@color/green"
                android:layout_marginVertical="10sp"
                android:hint="@string/gender"
                app:hintEnabled="true"
                android:id="@+id/txt2"
                app:hintTextColor="@color/green"
                app:errorEnabled="true"
                >
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/edt2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:inputType="none"
                android:lines="1"
                android:drawablePadding="-5dp"
                android:gravity="start"
                android:imeOptions="actionDone"
                android:drawableRight="@drawable/ic_arrow"
                android:drawableTint="@color/green"
                android:textStyle="bold"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnSaveContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="Save And Continue"
            android:textAllCaps="false"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="Back"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>


</ScrollView>